# block-io

./: Cargo.toml
.zed/: settings.json
src/: io_block_formatter.rs  io_block_reader.rs  lib.rs
