[package]
name = "block-io"
version = "0.3.2"
edition = "2024"
publish = ["kellnr"]

[dependencies]
bytes = { version = "1.11", default-features = false }
strum = { version = "0.28", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
rancor = "0.1"
rkyv = "0.8"
rstest = "0.26"
